# RobustCriticalPointDetection

./: CMakeLists.txt  LICENSE  README.md  install_deps.sh  patch_SOS.txt
include/: CP.h  RW.h  sos_utils.h  vec.h
src/: CP.cpp  RW.cpp  main.cpp
